# pan_tilt_ros

pan_tilt_bringup/launch/: panTilt_bringup.launch  panTilt_view.launch
pan_tilt_description/launch/: view_model.launch
pan_tilt_trajectory/: CMakeLists.txt  package.xml
pan_tilt_trajectory/config/: trajsettings.yaml
pan_tilt_trajectory/launch/: panTilt_traj.launch
pan_tilt_trajectory/src/: traj_pub.cpp
